--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.5",
     "vite": "^4.3.9"
   }
