--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.33.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.5",
     "vite": "^4.3.9"
