--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.14.3",
-    "@types/three": "^0.152.1",
+    "@emotion/react": "^11.11.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.153.0",
     "zustand": "^4.4.2"
   },
   "devDependencies": {
