--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "lodash": "^4.17.21",
+    "p5": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.4.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199",
+    "@types/p5": "^1.7.6",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
