--- a/package.json
+++ b/package.json
@@ -9,25 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.14.0",
     "lodash": "^4.17.21",
-    "p5": "^1.9.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zustand": "^4.4.2"
+    "motion": "^12.23.24",
+    "p5": "^2.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-scan": "^0.4.3",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.199",
-    "@types/p5": "^1.7.6",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "@vitejs/plugin-react-swc": "^3.4.0",
-    "eslint": "^8.50.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "@biomejs/biome": "2.3.8",
+    "@types/lodash": "^4.17.21",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4"
   }
 }
